--- a/src/app/WatchWare/Company/add-company/add-company.component.html
+++ b/src/app/WatchWare/Company/add-company/add-company.component.html
@@ -1,4 +1,4 @@
-<div class="my-5 bg-white shadow-md rounded-lg p-6">
+<div class="my-5 border bg-white shadow-md rounded-lg p-6">
     <h2 class="text-gray-900 text-xl font-bold mb-4">Create Company</h2>
 
     <div class="grid grid-cols-1 lg:grid-cols-12 gap-4">
