--- a/src/app/WatchWare/Oxide/edit-oxide/edit-oxide.component.html
+++ b/src/app/WatchWare/Oxide/edit-oxide/edit-oxide.component.html
@@ -1,4 +1,4 @@
-<div class="my-5 bg-white shadow-lg rounded-lg p-6">
+<div class="my-5 border bg-white shadow-lg rounded-lg p-6">
     <span class="text-xl font-bold text-gray-900 mb-4">Update Oxide</span>
     <div class="grid grid-cols-1 lg:grid-cols-12 gap-6">
         <div class="lg:col-span-3">
