--- a/src/app/WatchWare/Channel/add-channel/add-channel.component.html
+++ b/src/app/WatchWare/Channel/add-channel/add-channel.component.html
@@ -1,4 +1,4 @@
-<div class="my-5 p-6 bg-white rounded-lg shadow-lg">
+<div class="my-5 border p-6 bg-white rounded-lg shadow-lg">
     <h2 class="text-xl font-bold text-gray-900 mb-4">Create Channel</h2>
     <div class="grid grid-cols-1 lg:grid-cols-12 gap-6">
         <!-- Sidebar Description -->
