--- a/src/app/WatchWare/ScalingFactor/edit-scaling-factor/edit-scaling-factor.component.html
+++ b/src/app/WatchWare/ScalingFactor/edit-scaling-factor/edit-scaling-factor.component.html
@@ -1,4 +1,4 @@
-<div class="my-5 p-6 bg-white rounded-lg shadow-lg">
+<div class="my-5 border p-6 bg-white rounded-lg shadow-lg">
     <span class="text-xl font-bold text-gray-900 mb-4">Update Scaling Factor</span>
     <div class="grid grid-cols-1 lg:grid-cols-12 gap-6">
         <div class="lg:col-span-3">
