--- a/src/app/WatchWare/Station/add-station/add-station.component.html
+++ b/src/app/WatchWare/Station/add-station/add-station.component.html
@@ -1,4 +1,4 @@
-<div class="my-5 bg-white shadow-lg rounded-lg p-6">
+<div class="my-5 border bg-white shadow-lg rounded-lg p-6">
     <h2 class="text-xl font-bold text-gray-900 mb-4">Create Station</h2>
     <div class="grid grid-cols-1 lg:grid-cols-12 gap-6">
         <!-- Sidebar Description -->
