logo for navbar

--- a/src/app/Navigation/sidebar/sidebar.component.html
+++ b/src/app/Navigation/sidebar/sidebar.component.html
@@ -2,8 +2,11 @@
 <div
     class="fixed top-0 left-0 w-full h-16 bg-accent text-primary font-bold text-2xl tracking-wide flex justify-between items-center px-6 z-50">
     <div
-        class="flex items-center p-1 border-2 border-accent rounded-md hover:bg-primary hover:text-accent cursor-pointer hover:border-primary transition-colors duration-300 ease-in-out">
+        class="flex items-center p-1 border-2 border-accent rounded-md cursor-pointer transition-colors duration-300 ease-in-out">
         <!-- Logo -->
+        <img src="assets/logo/Logo.png" alt="Logo" class="h-10 w-auto rounded-sm mr-2" />
+
+
 
         NKSS WatchWare
     </div>
