--- a/src/app/WatchWare/Reports/Result/availability/availability.component.html
+++ b/src/app/WatchWare/Reports/Result/availability/availability.component.html
@@ -5,6 +5,7 @@
             <span class="text-gray-600 text-lg mx-6">Average : {{getAggregationTypeName(aggregationType)}}</span>
         </div>
         <div class="flex gap-3">
+            <span>Export as </span>
             <button
                 class="bg-accent text-white px-4 py-2 rounded-lg flex items-center gap-2 hover:opacity-60 transition"
                 (click)="onExportExcel()">
