--- a/src/app/WatchWare/Reports/Result/trends/trends.component.html
+++ b/src/app/WatchWare/Reports/Result/trends/trends.component.html
@@ -6,7 +6,7 @@
             <span class="text-gray-600 text-lg mx-6">Average : {{getAggregationTypeName(aggregationType)}}</span>
         </div>
         <div class="flex gap-3">
-            <button
+            <button (click)="onExport()"
                 class="bg-accent text-white px-4 py-2 rounded-lg flex items-center gap-2 hover:opacity-60 transition">
                 <i class="fa fa-file-image"></i> Png
             </button>
