--- a/src/app/WatchWare/Reports/Result/trends/trends.component.html
+++ b/src/app/WatchWare/Reports/Result/trends/trends.component.html
@@ -8,7 +8,7 @@
         <div class="flex gap-3">
             <button (click)="onExport()"
                 class="bg-accent text-white px-4 py-2 rounded-lg flex items-center gap-2 hover:opacity-60 transition">
-                <i class="fa fa-file-image"></i> Png
+                <i class="fa fa-file-image"></i> Jpeg
             </button>
         </div>
     </div>
