--- a/src/app/WatchWare/Reports/selection/selection.component.html
+++ b/src/app/WatchWare/Reports/selection/selection.component.html
@@ -59,14 +59,14 @@
         <div>
             <label for="fromDate"
                 class="block text-sm font-medium text-gray-700 disabled:cursor-not-allowed">From</label>
-            <p-date-picker inputId="From" formControlName="From" [showTime]="true" hourFormat="
+            <p-date-picker showIcon="true" inputId="From" formControlName="From" [showTime]="true" hourFormat="
                 24"></p-date-picker>
         </div>
 
         <!-- To Date Picker -->
         <div>
             <label for="toDate" class="block text-sm font-medium text-gray-700 disabled:cursor-not-allowed">To</label>
-            <p-date-picker inputId="To" formControlName="To" [showTime]="true" hourFormat="
+            <p-date-picker showIcon="true" inputId="To" formControlName="To" [showTime]="true" hourFormat="
             24"></p-date-picker>
         </div>
     </form>
