--- a/src/app/WatchWare/DashBoard/live-feed/live-feed.component.html
+++ b/src/app/WatchWare/DashBoard/live-feed/live-feed.component.html
@@ -41,7 +41,19 @@
                         </tbody>
                     </table>
                 </div>
-                <app-overview-graph [Station]="station"></app-overview-graph>
+                <div class="grid grid-cols-1 md:grid-cols-12 gap-4">
+                    <!-- Overview Graph - Takes 100% on small screens, 75% on medium+ screens -->
+                    <div class="col-span-1 md:col-span-7">
+                        <app-overview-graph [Station]="station"></app-overview-graph>
+                    </div>
+
+                    <!-- Overview Exceedance (Pie Chart) - Takes 100% on small screens, 25% on medium+ screens -->
+                    <div class="col-span-1 md:col-span-5">
+                        <app-overview-exceedance [Station]="station"></app-overview-exceedance>
+                    </div>
+                </div>
+
+
             </div>
         </div>
 
