--- a/src/app/WatchWare/Oxide/list-oxides/list-oxides.component.html
+++ b/src/app/WatchWare/Oxide/list-oxides/list-oxides.component.html
@@ -1,3 +1,6 @@
+<div class="">
+    <h2 class="text-2xl font-normal text-gray-500">Oxides</h2>
+</div>
 <div class="my-5 border rounded-lg shadow-md p-4 bg-white">
     <p-table #dt [value]="Oxides" dataKey="Id" [rows]="10" [rowsPerPageOptions]="[10, 25, 50]" [loading]="Loading"
         showGridlines="" [paginator]="true" [globalFilterFields]="['OxideName', 'Limit']"
