--- a/src/app/WatchWare/Channel/list-channels/list-channels.component.html
+++ b/src/app/WatchWare/Channel/list-channels/list-channels.component.html
@@ -1,3 +1,6 @@
+<div *ngIf="station" class="">
+    <h2 class="text-2xl font-normal text-gray-500">Channels of {{station.Name}}</h2>
+</div>
 <div class="my-5 border rounded-lg shadow-md p-4 bg-white">
     <p-table #dt [value]="Channels" dataKey="Id" [rows]="10" [rowsPerPageOptions]="[10, 25, 50]" [loading]="Loading"
         showGridlines="" [paginator]="true" [globalFilterFields]="['Oxide', 'Name','Protocol','LoggingUnits']"
