--- a/src/app/WatchWare/System/configuration/configuration.component.html
+++ b/src/app/WatchWare/System/configuration/configuration.component.html
@@ -1,3 +1,6 @@
+<div class="">
+    <h2 class="text-2xl font-normal text-gray-500">Configuration Settings</h2>
+</div>
 <div class="my-5 border rounded-lg shadow-md p-4 bg-white">
 
     <p-table #dt [value]="ConfigSettings" dataKey="Id" [rows]="10" [rowsPerPageOptions]="[10, 25, 50]"
