--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,10 +24,10 @@
         </div>
       </div> -->
 
-      <button type="button" (click)="goBack()"
+      <!-- <button type="button" (click)="goBack()"
         class="px-4 py-1 border border-accent bg-primary text-accent rounded-md hover:bg-accent hover:text-primary transition">
         <i class="fa fa-arrow-left"></i> Back
-      </button>
+      </button> -->
 
       <router-outlet></router-outlet>
     </div>
