--- a/src/app/WatchWare/UsersManagement/list-users/list-users.component.html
+++ b/src/app/WatchWare/UsersManagement/list-users/list-users.component.html
@@ -1,5 +1,5 @@
 <div class="">
-    <h2 class="text-2xl font-normal text-gray-500">Manager Users</h2>
+    <h2 class="text-2xl font-normal text-gray-500">Manage Users</h2>
 </div>
 <div class="my-5 border rounded-lg shadow-md p-4 bg-white">
     <p-table #dt [value]="Users" dataKey="Id" [rows]="10" [rowsPerPageOptions]="[10, 25, 50]" [loading]="Loading"
