--- a/src/app/WatchWare/System/Notification/create-subscription/create-subscription.component.html
+++ b/src/app/WatchWare/System/Notification/create-subscription/create-subscription.component.html
@@ -1,1 +1,101 @@
-<p>create-subscription works!</p>
+<div *ngIf="!ChannelLoading; else loadingSkeleton">
+    <h2 class="text-2xl font-normal text-gray-500">Subscribe to {{ channel.Name }}</h2>
+</div>
+
+<ng-template #loadingSkeleton>
+    <div class="animate-pulse">
+        <div class="h-7 bg-gray-300 rounded w-[25%] mb-4"></div>
+    </div>
+</ng-template>
+
+<div class="my-5 border rounded-lg shadow-md p-4 bg-white">
+    <p-table #dt [value]="Conditions" dataKey="GeneratedId" [rows]="10" [rowsPerPageOptions]="[10, 25, 50]"
+        [(selection)]="selectedConditions" [loading]="Loading" showGridlines="" [paginator]="true"
+        [globalFilterFields]="['ConditionName', 'ConditionType','Operator','Threshold','Cooldown','Duration']"
+        [tableStyle]="{ 'min-width': '1000px' }">
+        <ng-template #caption>
+            <div class="flex">
+                <button type="button" (click)="onCreate()"
+                    class=" px-4 bg-accent border border-accent text-primary rounded-md hover:bg-accent hover:text-primary transition">
+                    <i class="fa fa-plus"></i>
+
+                    Create Condition
+                </button>
+                <button type="button" (click)="onSubscribe()"
+                    class="mx-4 px-4 bg-green-500 border border-green-500 text-primary rounded-md hover:bg-accent border-none hover:text-primary transition">
+                    <i class="fa fa-check mr-2"></i> Subscribe
+                </button>
+                <p-iconfield iconPosition="left" class="ml-auto">
+                    <p-inputicon>
+
+                        <span *ngIf="SubscribeLoading">
+                            <i class="fas fa-spinner fa-spin mr-2"></i>
+                        </span>
+                        <span *ngIf="!SubscribeLoading">
+                            <i class="fa fa-search"></i>
+                        </span>
+                    </p-inputicon>
+                    <input pInputText type="text" (input)="onGlobalFilter(dt, $event)" placeholder="Search keyword" />
+                </p-iconfield>
+            </div>
+        </ng-template>
+        <ng-template #header>
+            <tr>
+                <th style="background-color:  var(--color-secondary) ;color: var(--color-primary);width:1%">
+                    <p-tableHeaderCheckbox />
+                </th>
+                <th style="background-color:  var(--color-secondary) ;color: var(--color-primary);width:10%">Condition
+                    Name
+                </th>
+                <th style="background-color:  var(--color-secondary) ;color: var(--color-primary);width:5%">
+                    Condition Type
+                </th>
+                <th style="background-color:  var(--color-secondary) ;color: var(--color-primary);width:5%">Operator
+                </th>
+                <th style="background-color:  var(--color-secondary) ;color: var(--color-primary);width:15%">Threshold
+                </th>
+
+                <th style="background-color:  var(--color-secondary) ;color: var(--color-primary);width:5%">Cooldown
+                </th>
+                <th style="background-color:  var(--color-secondary) ;color: var(--color-primary);width:5%">Duration
+                </th>
+            </tr>
+        </ng-template>
+        <ng-template #body let-condition let-i="rowIndex">
+            <tr>
+                <td>
+                    <p-tableCheckbox [value]="condition" />
+                </td>
+                <td>{{ condition.ConditionName }}</td>
+                <td>{{ getConditionTypeName(condition.ConditionType) }}</td>
+
+
+                <td>{{ getOperatorName(condition.Operator) }}</td>
+                <td>{{ condition.Threshold }}</td>
+                <td>{{ condition.Cooldown }} Minutes</td>
+                <td>{{ condition.Duration }} Minutes</td>
+                <!-- <td>
+                    <div class="flex gap-2">
+
+                        <button type="button" (click)="onEdit(channel)"
+                            class="px-2 text-green-500 border border-green-500 rounded-md hover:bg-green-500 hover:text-white transition">
+                            <i class="fa fa-pencil-alt"></i>
+                        </button>
+
+
+                        <button type="button" (click)="onDelete(channel)"
+                            class="px-2 text-red-500 border border-red-500 rounded-md hover:bg-red-500 hover:text-white transition">
+                            <i class="fa fa-trash"></i>
+                        </button>
+                    </div>
+                </td> -->
+
+            </tr>
+        </ng-template>
+        <ng-template #emptymessage>
+            <tr>
+                <td colspan="9">No Conditions found.</td>
+            </tr>
+        </ng-template>
+    </p-table>
+</div>
