--- a/src/app/WatchWare/System/Notification/channel-statuses/statuses.component.html
+++ b/src/app/WatchWare/System/Notification/channel-statuses/statuses.component.html
@@ -41,9 +41,9 @@
                 <td>
                     <div class="flex gap-2">
 
-                        <button *ngIf="channel.Subscribed" type="button" (click)="onUnSubscribe(channel)"
-                            class="px-2  text-red-500 border border-red-500 rounded-md hover:bg-red-500 hover:text-white transition">
-                            UnSubsrcibe
+                        <button *ngIf="channel.Subscribed" type="button" (click)="onEditSubscription(channel)"
+                            class="px-2  text-orange-500 border border-orange-500 rounded-md hover:bg-orange-500 hover:text-white transition">
+                            Edit Subscription
                         </button>
                         <button *ngIf="!channel.Subscribed" type="button" (click)="onSubscribe(channel)"
                             class="px-2  text-blue-500 border border-blue-500 rounded-md hover:bg-blue-500 hover:text-white transition">
