added show password function

--- a/src/app/WatchWare/Auth/login/login.component.html
+++ b/src/app/WatchWare/Auth/login/login.component.html
@@ -22,18 +22,29 @@
 
             <!-- Password Field -->
             <div class="relative">
-                <input id="password" type="password" required
+                <input id="password" [type]="hide ? 'password' : 'text'" required
                     class="w-full p-3 border border-gray-300 rounded-md focus:ring-2 focus:ring-blue-500 focus:outline-none"
                     placeholder="Password" formControlName="password">
-                <span class="absolute inset-y-0 left-3 flex items-center text-gray-400">
-                    <!-- <i class="fas fa-lock"></i> -->
-                </span>
+                <!-- <span>
+                    <i class="fa fa-lock"></i>
+                </span> -->
+                <!-- <span class="absolute inset-y-0 left-3 flex justify-end text-gray-400">
+                    <i class="fas fa-lock"></i>
+                </span> -->
             </div>
-
-            <!-- Forgot Password Link -->
-            <div class="flex justify-end">
+            <div class="flex justify-between">
+                <!-- <a class="text-blue-500 hover:underline text-sm">Forgot password?</a> -->
+                <button type="button" (click)="hide=!hide">
+                    <i *ngIf="hide" class="fa fa-lock text-gray-600"></i>
+                    <i *ngIf="!hide" class="fa fa-unlock text-gray-600"></i>
+                    <span class="pl-2 text-gray-600 text-sm">Show password</span>
+                </button>
                 <a class="text-blue-500 hover:underline text-sm">Forgot password?</a>
             </div>
+            <!-- Forgot Password Link -->
+            <!-- <div class="flex justify-end">
+                <a class="text-blue-500 hover:underline text-sm">Forgot password?</a>
+            </div> -->
 
 
             <button type="submit" [disabled]="loginForm.invalid || loading" class="w-full bg-accent text-white font-semibold p-3 flex justify-center items-center gap-2
