--- a/src/app/WatchWare/Channel/edit-channel/edit-channel.component.html
+++ b/src/app/WatchWare/Channel/edit-channel/edit-channel.component.html
@@ -138,7 +138,7 @@
                         <label for="threshold" class="font-medium text-gray-700 text-900">Threshold</label>
                         <input id="threshold" type="number" formControlName="Threshold"
                             class="w-full px-3 py-2 border border-gray-400 rounded-md focus:ring-2 focus:ring-blue-400 focus:border-blue-500"
-                            required min="-1000000" step="any">
+                            min="-1000000" step="any">
                         <small *ngIf="channelForm.get('Threshold')?.invalid && channelForm.get('Threshold')?.touched"
                             class="text-red-500 text-sm">Threshold is required</small>
                     </div>
