--- a/src/app/WatchWare/Auth/login/login.component.html
+++ b/src/app/WatchWare/Auth/login/login.component.html
@@ -1,6 +1,19 @@
 <div class="flex justify-center items-center min-h-screen"
     style="background: url('/assets/logo/login background.jpg') no-repeat center center / cover;">
 
+    <div class="fixed top-0 left-0 px-6 py-4 text-primary font-bold text-2xl ">
+        <div class="flex items-start">
+            <img src="assets/logo/Logo.png" alt="Logo" class="h-10 w-auto rounded-sm mr-2" />
+            <span class="py-1">NKSS WatchWare</span>
+        </div>
+    </div>
+    <div class="fixed top-0 right-0 px-6 py-4 text-primary font-bold text-2xl ">
+        <div
+            class="flex items-start hover:cursor-pointer border rounded  hover:bg-primary hover:text-accent transition-colors duration-150">
+            <i class="fa fa-key px-4 py-1"></i>
+        </div>
+    </div>
+
 
     <div class="bg-white bg-opacity-75 p-8 rounded-lg shadow-lg w-96">
 
